	* added support for unbuffered I/O for aligned files
	* added workaround for sparse file issue on Windows Vista
	* added new lt_trackers extension to exchange trackers between
	  peers
	* added support for BEP 17 http seeds
	* added read_piece() to read pieces from torrent storage
	* added option for udp tracker preference
	* added super seeding
	* added add_piece() function to inject data from external sources
	* add_tracker() function added to torrent_handle
	* if there is no working tracker, current_tracker is the
	  tracker that is currently being tried
	* torrents that are checking can now be paused, which will
	  pause the checking
	* introduced another torrent state, checking_resume_data, which
	  the torrent is in when it's first added, and is comparing
	  the files on disk with the resume data
	* DHT bandwidth usage optimizations
	* rate limited DHT send socket
	* tracker connections are now also subject to IP filtering
	* improved optimistic unchoke logic
	* added monitoring of the DHT lookups
	* added bandwidth reports for estimated TCP/IP overhead and DHT
	* includes DHT traffic in the rate limiter
	* added support for bitcomet padding files

release 0.14.2

	* added missing functions to the python bindings torrent_info::map_file,
	  torrent_info::map_block and torrent_info::file_at_offset.
	* removed support for boost-1.33 and earlier (probably didn't work)
	* fixed potential freezes issues at shutdown
	* improved error message for python setup script
	* fixed bug when torrent file included announce-list, but no valid
	  tracker urls
	* fixed bug where the files requested from web seeds would be the
	  renamed file names instead of the original file names in the torrent.
	* documentation fix of queing section
	* fixed potential issue in udp_socket (affected udp tracker support)
	* made name, comment and created by also be subject to utf-8 error
	  correction (filenames already were)
	* fixed dead-lock when settings DHT proxy